Batch update of generated files

--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -471,6 +471,33 @@
     */
     const newsData = [
   {
+    "title": "Cô giáo ở TP.HCM bỗng dưng làm giám đốc ở Đà Nẵng, bị cấm xuất cảnh vì nợ thuế",
+    "content": "Một cô giáo ở TP.HCM bỗng dưng bị cấm xuất cảnh do đang đứng tên giám đốc một công ty ở Đà Nẵng có nợ thuế 64 triệu đồng. Cô T. khẳng định mình không hề biết về việc này và cho rằng có thể giấy tờ của mình đã bị giả mạo. Hiện vụ việc đang được Công an Đà Nẵng điều tra để làm rõ những thông tin liên quan đến việc đăng ký doanh nghiệp giả mạo.",
+    "link": "https://tuoitre.vn/co-giao-o-tp-hcm-bong-dung-lam-giam-doc-o-da-nang-bi-cam-xuat-canh-vi-no-thue-20250324131945141.htm",
+    "cat": "phap-luat",
+    "positivity": 3,
+    "importance": 7,
+    "question": "Tại sao cô giáo ở TP.HCM lại bị cấm xuất cảnh?",
+    "answers": [
+      {
+        "text": "Vì cô giáo bị nợ thuế khi đứng tên giám đốc một công ty ở Đà Nẵng.",
+        "correct": true
+      },
+      {
+        "text": "Cô giáo không có giấy tờ tùy thân hợp lệ.",
+        "correct": false
+      },
+      {
+        "text": "Cô giáo đang bị điều tra hình sự.",
+        "correct": false
+      },
+      {
+        "text": "Cô giáo vi phạm quy định xuất cảnh.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Ông Trump nêu giả thuyết mới về vụ Tổng thống Kennedy bị ám sát",
     "content": "Tổng thống Mỹ Donald Trump đã phát biểu rằng ông tin rằng Lee Harvey Oswald không hành động đơn lẻ trong vụ ám sát Tổng thống John F. Kennedy năm 1963. Ông cho rằng Oswald có thể đã nhận được sự giúp đỡ từ một hoặc nhiều người khác, điều này trái ngược với kết luận của Bộ Tư pháp Mỹ rằng Oswald hành động một mình. Trump đã công bố một loạt tài liệu liên quan đến vụ ám sát nhằm minh bạch thông tin về sự kiện này, mặc dù ông cũng lưu ý rằng các tài liệu không có thông tin quá đặc biệt.",
     "link": "https://dantri.com.vn/the-gioi/ong-trump-neu-gia-thuyet-moi-ve-vu-tong-thong-kennedy-bi-am-sat-20250324111445517.htm",
@@ -865,33 +892,6 @@
     ]
   },
   {
-    "title": "Cộng đồng 'dậy sóng' vì huy chương VnExpress Marathon Huế",
-    "content": "Cộng đồng chạy bộ đang rất hào hứng với thiết kế huy chương VnExpress Marathon Huế 2025, lấy cảm hứng từ chim phượng hoàng và cây ngô đồng cổ thụ, kết hợp với các biểu tượng nổi bật của thành phố Huế. Nhiều runner cho rằng thiết kế này đẹp và tạo động lực cho họ tham gia giải, với nhiều ý kiến khen ngợi trên mạng xã hội. Tuy nhiên, cũng có một số runner góp ý về tính chính xác trong phối cảnh của huy chương.",
-    "link": "https://vnexpress.net/cong-dong-day-song-vi-huy-chuong-vnexpress-marathon-hue-4864994.html",
-    "cat": "the-thao",
-    "positivity": 9,
-    "importance": 7,
-    "question": "Tại sao cộng đồng runner lại hào hứng với huy chương VnExpress Marathon Huế 2025?",
-    "answers": [
-      {
-        "text": "Vì thiết kế huy chương đẹp và mang tính biểu tượng của Huế.",
-        "correct": true
-      },
-      {
-        "text": "Vì có nhiều giải thưởng hấp dẫn đi kèm.",
-        "correct": false
-      },
-      {
-        "text": "Vì giải chạy có nhiều runner tham gia.",
-        "correct": false
-      },
-      {
-        "text": "Vì huy chương được làm từ chất liệu đặc biệt.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "5 món ăn nhẹ giàu canxi giúp trẻ phát triển xương",
     "content": "Bài viết giới thiệu 5 món ăn nhẹ giàu canxi giúp trẻ em phát triển xương chắc khỏe. Các thực phẩm được đề cập bao gồm phô mai, sữa chua, rau lá xanh, các loại hạt, trái cây và đậu phụ. Những món ăn này không chỉ cung cấp canxi mà còn bổ sung thêm vitamin và chất dinh dưỡng cần thiết cho sự phát triển của trẻ.",
     "link": "https://vnexpress.net/5-mon-an-nhe-giau-canxi-giup-tre-phat-trien-xuong-4865128.html",
@@ -914,6 +914,33 @@
       },
       {
         "text": "Mì tôm, snack, kẹo",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Cộng đồng 'dậy sóng' vì huy chương VnExpress Marathon Huế",
+    "content": "Cộng đồng chạy bộ đang rất hào hứng với thiết kế huy chương VnExpress Marathon Huế 2025, lấy cảm hứng từ chim phượng hoàng và cây ngô đồng cổ thụ, kết hợp với các biểu tượng nổi bật của thành phố Huế. Nhiều runner cho rằng thiết kế này đẹp và tạo động lực cho họ tham gia giải, với nhiều ý kiến khen ngợi trên mạng xã hội. Tuy nhiên, cũng có một số runner góp ý về tính chính xác trong phối cảnh của huy chương.",
+    "link": "https://vnexpress.net/cong-dong-day-song-vi-huy-chuong-vnexpress-marathon-hue-4864994.html",
+    "cat": "the-thao",
+    "positivity": 9,
+    "importance": 7,
+    "question": "Tại sao cộng đồng runner lại hào hứng với huy chương VnExpress Marathon Huế 2025?",
+    "answers": [
+      {
+        "text": "Vì thiết kế huy chương đẹp và mang tính biểu tượng của Huế.",
+        "correct": true
+      },
+      {
+        "text": "Vì có nhiều giải thưởng hấp dẫn đi kèm.",
+        "correct": false
+      },
+      {
+        "text": "Vì giải chạy có nhiều runner tham gia.",
+        "correct": false
+      },
+      {
+        "text": "Vì huy chương được làm từ chất liệu đặc biệt.",
         "correct": false
       }
     ]
@@ -1383,33 +1410,6 @@
     ]
   },
   {
-    "title": "Từng mắc quai bị có vô sinh không?",
-    "content": "Bệnh quai bị có thể gây ra một số biến chứng nghiêm trọng, bao gồm viêm tinh hoàn ở nam giới, đặc biệt là sau tuổi dậy thì, dẫn đến nguy cơ vô sinh. Nếu viêm tinh hoàn xảy ra ở cả hai bên, khả năng sản xuất tinh trùng sẽ suy giảm nghiêm trọng, gây ra tình trạng vô tinh. Trẻ gái cũng có thể bị viêm buồng trứng, nhưng ít khi dẫn đến vô sinh. Để phòng ngừa, việc tiêm vaccine quai bị là rất quan trọng.",
-    "link": "https://vnexpress.net/tung-mac-quai-bi-co-vo-sinh-khong-4865030.html",
-    "cat": "suc-khoe",
-    "positivity": 4,
-    "importance": 8,
-    "question": "Mắc quai bị có thể gây vô sinh không?",
-    "answers": [
-      {
-        "text": "Có, nếu viêm tinh hoàn xảy ra ở cả hai bên.",
-        "correct": true
-      },
-      {
-        "text": "Không, quai bị không ảnh hưởng đến khả năng sinh sản.",
-        "correct": false
-      },
-      {
-        "text": "Có, nhưng chỉ ở trẻ gái.",
-        "correct": false
-      },
-      {
-        "text": "Không, trẻ sẽ luôn có khả năng sinh sản.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "6 món hỗ trợ cải thiện tiêu hóa",
     "content": "Bài viết giới thiệu 6 món ăn hỗ trợ cải thiện tiêu hóa, bao gồm sữa chua, rau xanh đậm, hạt chia, táo, rau thì là và đu đủ. Những thực phẩm này giàu lợi khuẩn, chất xơ và enzyme, giúp tăng cường hệ tiêu hóa, giảm tình trạng táo bón và đầy hơi. Sữa chua chứa probiotic, trong khi rau xanh và hạt chia cung cấp chất xơ cần thiết cho sự hoạt động của đường ruột. Đu đủ với enzyme papain hỗ trợ phân hủy protein, góp phần vào quá trình tiêu hóa.",
     "link": "https://vnexpress.net/6-mon-ho-tro-cai-thien-tieu-hoa-4865045.html",
@@ -1490,6 +1490,33 @@
       },
       {
         "text": "Chỉ đi bộ trên bề mặt bằng phẳng",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Từng mắc quai bị có vô sinh không?",
+    "content": "Bệnh quai bị có thể gây ra một số biến chứng nghiêm trọng, bao gồm viêm tinh hoàn ở nam giới, đặc biệt là sau tuổi dậy thì, dẫn đến nguy cơ vô sinh. Nếu viêm tinh hoàn xảy ra ở cả hai bên, khả năng sản xuất tinh trùng sẽ suy giảm nghiêm trọng, gây ra tình trạng vô tinh. Trẻ gái cũng có thể bị viêm buồng trứng, nhưng ít khi dẫn đến vô sinh. Để phòng ngừa, việc tiêm vaccine quai bị là rất quan trọng.",
+    "link": "https://vnexpress.net/tung-mac-quai-bi-co-vo-sinh-khong-4865030.html",
+    "cat": "suc-khoe",
+    "positivity": 4,
+    "importance": 8,
+    "question": "Mắc quai bị có thể gây vô sinh không?",
+    "answers": [
+      {
+        "text": "Có, nếu viêm tinh hoàn xảy ra ở cả hai bên.",
+        "correct": true
+      },
+      {
+        "text": "Không, quai bị không ảnh hưởng đến khả năng sinh sản.",
+        "correct": false
+      },
+      {
+        "text": "Có, nhưng chỉ ở trẻ gái.",
+        "correct": false
+      },
+      {
+        "text": "Không, trẻ sẽ luôn có khả năng sinh sản.",
         "correct": false
       }
     ]
@@ -1746,33 +1773,6 @@
     ]
   },
   {
-    "title": "4 hiểu lầm thường gặp về đường",
-    "content": "Bài viết đề cập đến 4 hiểu lầm phổ biến về đường, bao gồm những tác hại của đường không chỉ trong bánh kẹo, nước ngọt mà còn trong nhiều sản phẩm chế biến khác. Đường tinh luyện có thể gây tăng cân, béo phì, rối loạn chuyển hóa và tăng nguy cơ bệnh tim mạch. Tuy nhiên, không phải tất cả loại đường đều xấu; đường tự nhiên trong trái cây và rau củ mang lại nhiều lợi ích cho sức khỏe. Người tiêu dùng nên thận trọng với lượng đường bổ sung và kết hợp ăn uống hợp lý.",
-    "link": "https://vnexpress.net/4-hieu-lam-thuong-gap-ve-duong-4865016.html",
-    "cat": "suc-khoe",
-    "positivity": 6,
-    "importance": 8,
-    "question": "Có những hiểu lầm nào về đường mà mọi người thường mắc phải?",
-    "answers": [
-      {
-        "text": "Đường không chỉ có hại trong bánh kẹo và nước ngọt",
-        "correct": true
-      },
-      {
-        "text": "Đường tự nhiên không gây hại cho sức khỏe",
-        "correct": false
-      },
-      {
-        "text": "Cắt bỏ hoàn toàn đường khỏi chế độ ăn là cần thiết",
-        "correct": false
-      },
-      {
-        "text": "Chỉ ăn đường một lần trong ngày là an toàn",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Skoda Kushaq - CUV cỡ B mới nhận cọc tại đại lý",
     "content": "Skoda Kushaq, mẫu CUV cỡ B mới của Skoda, đã bắt đầu nhận cọc từ giữa tháng 3 với giá dự kiến khoảng 600 triệu đồng. Đây là mẫu xe thứ ba của Skoda tại Việt Nam, sau Kodiaq và Karoq, được lắp ráp bởi tập đoàn Thành Công. Xe có kích thước tương đồng với Mitsubishi Xforce và sẽ cạnh tranh với các đối thủ như Kia Seltos và Hyundai Creta. Dự kiến, Kushaq sẽ được chính thức giới thiệu vào tháng 6 năm 2025 và có thể giao xe vào quý II.",
     "link": "https://vnexpress.net/skoda-kushaq-cuv-co-b-moi-nhan-coc-tai-dai-ly-4864777.html",
@@ -1795,6 +1795,33 @@
       },
       {
         "text": "Giữa tháng 1",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "4 hiểu lầm thường gặp về đường",
+    "content": "Bài viết đề cập đến 4 hiểu lầm phổ biến về đường, bao gồm những tác hại của đường không chỉ trong bánh kẹo, nước ngọt mà còn trong nhiều sản phẩm chế biến khác. Đường tinh luyện có thể gây tăng cân, béo phì, rối loạn chuyển hóa và tăng nguy cơ bệnh tim mạch. Tuy nhiên, không phải tất cả loại đường đều xấu; đường tự nhiên trong trái cây và rau củ mang lại nhiều lợi ích cho sức khỏe. Người tiêu dùng nên thận trọng với lượng đường bổ sung và kết hợp ăn uống hợp lý.",
+    "link": "https://vnexpress.net/4-hieu-lam-thuong-gap-ve-duong-4865016.html",
+    "cat": "suc-khoe",
+    "positivity": 6,
+    "importance": 8,
+    "question": "Có những hiểu lầm nào về đường mà mọi người thường mắc phải?",
+    "answers": [
+      {
+        "text": "Đường không chỉ có hại trong bánh kẹo và nước ngọt",
+        "correct": true
+      },
+      {
+        "text": "Đường tự nhiên không gây hại cho sức khỏe",
+        "correct": false
+      },
+      {
+        "text": "Cắt bỏ hoàn toàn đường khỏi chế độ ăn là cần thiết",
+        "correct": false
+      },
+      {
+        "text": "Chỉ ăn đường một lần trong ngày là an toàn",
         "correct": false
       }
     ]
@@ -2627,6 +2654,33 @@
     ]
   },
   {
+    "title": "Nghệ sĩ Vũ Thanh thời trẻ lầm lỡ, về già đau đớn nhìn vợ nguy kịch",
+    "content": "Nghệ sĩ Vũ Thanh hiện đang trải qua thời kỳ khó khăn khi vợ ông, ca sĩ Lệ Hải, đang trong tình trạng nguy kịch do nhiều bệnh lý nghiêm trọng. Sau hơn 40 năm gắn bó, ông phải chứng kiến cảnh vợ mình chống chọi với bệnh tật và suy yếu dần. Chi phí điều trị hiện đã vượt quá khả năng tài chính của gia đình, và ông phải vật lộn để kiếm sống trong lúc chăm sóc vợ. Dù vậy, ông vẫn giữ tinh thần lạc quan và không ngừng hy vọng vào sự hồi phục của vợ.",
+    "link": "https://dantri.com.vn/giai-tri/nghe-si-vu-thanh-thoi-tre-lam-lo-ve-gia-dau-don-nhin-vo-nguy-kich-20250321173615479.htm",
+    "cat": "gia-dinh",
+    "positivity": 3,
+    "importance": 7,
+    "question": "Tình trạng sức khỏe của vợ nghệ sĩ Vũ Thanh hiện tại ra sao?",
+    "answers": [
+      {
+        "text": "Vợ ông đang trong tình trạng nguy kịch.",
+        "correct": true
+      },
+      {
+        "text": "Vợ ông đã hồi phục hoàn toàn.",
+        "correct": false
+      },
+      {
+        "text": "Vợ ông đang khỏe mạnh và không có vấn đề gì.",
+        "correct": false
+      },
+      {
+        "text": "Vợ ông chỉ bị cảm lạnh thông thường.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Mẹ 3 con 'lão hóa ngược' sau trút bỏ 27 kg mỡ",
     "content": "Bùi Thị Minh Nguyệt, 28 tuổi, đã giảm 27 kg và 40 cm vòng eo trong gần 1,5 năm nhờ áp dụng chế độ ăn \"eat clean\" và tích cực vận động. Sau khi sinh hai con, Nguyệt đã phải đối mặt với tình trạng béo phì và nhiều vấn đề sức khỏe, nhưng nhờ quyết tâm thay đổi, cô đã đạt được vóc dáng thon gọn và khỏe mạnh hơn. Hiện tại, Nguyệt không chỉ duy trì thói quen ăn uống lành mạnh mà còn trở thành huấn luyện viên dinh dưỡng, giúp đỡ những người khác trong hành trình giảm cân và cải thiện sức khỏe.",
     "link": "https://vnexpress.net/me-3-con-lao-hoa-nguoc-sau-trut-bo-27-kg-mo-4864134.html",
@@ -2653,33 +2707,6 @@
       },
       {
         "text": "10 kg",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Nghệ sĩ Vũ Thanh thời trẻ lầm lỡ, về già đau đớn nhìn vợ nguy kịch",
-    "content": "Nghệ sĩ Vũ Thanh hiện đang trải qua thời kỳ khó khăn khi vợ ông, ca sĩ Lệ Hải, đang trong tình trạng nguy kịch do nhiều bệnh lý nghiêm trọng. Sau hơn 40 năm gắn bó, ông phải chứng kiến cảnh vợ mình chống chọi với bệnh tật và suy yếu dần. Chi phí điều trị hiện đã vượt quá khả năng tài chính của gia đình, và ông phải vật lộn để kiếm sống trong lúc chăm sóc vợ. Dù vậy, ông vẫn giữ tinh thần lạc quan và không ngừng hy vọng vào sự hồi phục của vợ.",
-    "link": "https://dantri.com.vn/giai-tri/nghe-si-vu-thanh-thoi-tre-lam-lo-ve-gia-dau-don-nhin-vo-nguy-kich-20250321173615479.htm",
-    "cat": "gia-dinh",
-    "positivity": 3,
-    "importance": 7,
-    "question": "Tình trạng sức khỏe của vợ nghệ sĩ Vũ Thanh hiện tại ra sao?",
-    "answers": [
-      {
-        "text": "Vợ ông đang trong tình trạng nguy kịch.",
-        "correct": true
-      },
-      {
-        "text": "Vợ ông đã hồi phục hoàn toàn.",
-        "correct": false
-      },
-      {
-        "text": "Vợ ông đang khỏe mạnh và không có vấn đề gì.",
-        "correct": false
-      },
-      {
-        "text": "Vợ ông chỉ bị cảm lạnh thông thường.",
         "correct": false
       }
     ]
@@ -3929,6 +3956,33 @@
     ]
   },
   {
+    "title": "Thông báo làm sinh viên thốt lên \"trường sống vội quá, em theo không kịp\"",
+    "content": "Trường Đại học Công thương TPHCM đã công bố lịch nghỉ Tết Nguyên đán 2026 vào tháng 3, khiến nhiều sinh viên cảm thấy nôn nao và thốt lên rằng \"trường sống vội quá, em theo không kịp\". Thông báo này đã nhận được nhiều phản hồi tích cực từ sinh viên với hàng loạt bình luận hài hước trên mạng xã hội. Lịch nghỉ Tết kéo dài 4 tuần từ 9/2/2026 đến 8/3/2026 nhằm giúp sinh viên và cán bộ có thời gian nghỉ ngơi, đồng thời tránh tình trạng quá tải trong những ngày cao điểm gần Tết.",
+    "link": "https://dantri.com.vn/giao-duc/thong-bao-lam-sinh-vien-thot-len-truong-song-voi-qua-em-theo-khong-kip-20250323072426482.htm",
+    "cat": "giao-duc",
+    "positivity": 8,
+    "importance": 6,
+    "question": "Tại sao sinh viên Trường Đại học Công thương TPHCM lại cảm thấy nôn nao khi đọc thông báo nghỉ Tết?",
+    "answers": [
+      {
+        "text": "Vì trường công bố lịch nghỉ Tết sớm hơn dự kiến.",
+        "correct": true
+      },
+      {
+        "text": "Vì sinh viên không thích nghỉ Tết.",
+        "correct": false
+      },
+      {
+        "text": "Vì sinh viên đang bận học kỳ cuối.",
+        "correct": false
+      },
+      {
+        "text": "Vì trường không cho họ biết lịch nghỉ lễ.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Hầu hết mọi người sẽ nhiễm HPV trong cuộc đời",
     "content": "Hầu hết mọi người sẽ nhiễm virus HPV trong cuộc đời, nhưng chỉ một số ít ca có thể dẫn đến ung thư. Virus HPV gồm hơn 200 chủng, trong đó có những chủng nguy cơ thấp không gây ung thư và thường tự khỏi. Tuy nhiên, các chủng nguy cơ cao có thể gây ra 5% tổng số ca ung thư toàn cầu, đặc biệt là ung thư cổ tử cung. Vaccine HPV có thể ngăn ngừa hơn 90% các bệnh ung thư do virus này gây ra, nhưng tỷ lệ tiêm vaccine ở Việt Nam còn thấp.",
     "link": "https://vnexpress.net/hau-het-moi-nguoi-se-nhiem-hpv-trong-cuoc-doi-4864744.html",
@@ -3955,33 +4009,6 @@
       },
       {
         "text": "Ung thư đại tràng",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Thông báo làm sinh viên thốt lên \"trường sống vội quá, em theo không kịp\"",
-    "content": "Trường Đại học Công thương TPHCM đã công bố lịch nghỉ Tết Nguyên đán 2026 vào tháng 3, khiến nhiều sinh viên cảm thấy nôn nao và thốt lên rằng \"trường sống vội quá, em theo không kịp\". Thông báo này đã nhận được nhiều phản hồi tích cực từ sinh viên với hàng loạt bình luận hài hước trên mạng xã hội. Lịch nghỉ Tết kéo dài 4 tuần từ 9/2/2026 đến 8/3/2026 nhằm giúp sinh viên và cán bộ có thời gian nghỉ ngơi, đồng thời tránh tình trạng quá tải trong những ngày cao điểm gần Tết.",
-    "link": "https://dantri.com.vn/giao-duc/thong-bao-lam-sinh-vien-thot-len-truong-song-voi-qua-em-theo-khong-kip-20250323072426482.htm",
-    "cat": "giao-duc",
-    "positivity": 8,
-    "importance": 6,
-    "question": "Tại sao sinh viên Trường Đại học Công thương TPHCM lại cảm thấy nôn nao khi đọc thông báo nghỉ Tết?",
-    "answers": [
-      {
-        "text": "Vì trường công bố lịch nghỉ Tết sớm hơn dự kiến.",
-        "correct": true
-      },
-      {
-        "text": "Vì sinh viên không thích nghỉ Tết.",
-        "correct": false
-      },
-      {
-        "text": "Vì sinh viên đang bận học kỳ cuối.",
-        "correct": false
-      },
-      {
-        "text": "Vì trường không cho họ biết lịch nghỉ lễ.",
         "correct": false
       }
     ]
@@ -4036,37 +4063,6 @@
       },
       {
         "text": "Chỉ tập trung vào việc quảng bá trên mạng xã hội",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "5 mẹo vặt tai hại khi học theo 'chuyên gia TikTok'",
-    "content": "Bài viết nêu rõ 5 mẹo vặt tai hại mà người dùng TikTok thường chia sẻ, bao gồm việc dùng dao cạo để làm sạch bếp điện, pha thuốc tẩy thông ống thoát nước, dùng đá để làm sạch bồn rửa bát, tự chế thuốc diệt chuột từ xà phòng, và làm thơm phòng tắm bằng giấy vệ sinh. Những mẹo này không chỉ không hiệu quả mà còn có thể gây hại cho thiết bị và sức khỏe. Bài viết khuyến cáo người dùng nên tìm hiểu kỹ thông tin trước khi áp dụng các mẹo từ mạng xã hội.",
-    "link": "https://vnexpress.net/5-meo-vat-tai-hai-khi-hoc-theo-chuyen-gia-tiktok-4864650.html",
-    "cat": "gia-dinh",
-    "positivity": 2,
-    "importance": 8,
-    "question": "Những mẹo vặt nào trong TikTok được coi là tai hại cho gia đình?",
-    "answers": [
-      {
-        "text": "Dùng dao cạo để làm sạch bếp điện",
-        "correct": true
-      },
-      {
-        "text": "Dùng nước nóng để rửa chén",
-        "correct": false
-      },
-      {
-        "text": "Sử dụng thuốc tẩy để làm sạch sàn nhà",
-        "correct": false
-      },
-      {
-        "text": "Đổ đường vào ống thoát nước",
-        "correct": false
-      },
-      {
-        "text": "Dùng dấm để làm sạch kính",
         "correct": false
       }
     ]
