--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -668,6 +668,37 @@
     ]
   },
   {
+    "title": "Nhạc sĩ Sỹ Luân: Từng bị tai nạn mất trí nhớ, sống thực vật giờ ra sao?",
+    "content": "Nhạc sĩ Sỹ Luân, sau 16 năm từ tai nạn giao thông nghiêm trọng khiến anh mất trí nhớ và sống thực vật, hiện đã hồi phục sức khỏe. Trong lần xuất hiện gần đây, anh khẳng định sức khỏe ổn định nhưng vẫn hay quên. Sỹ Luân hiện là Phó viện trưởng Viện Văn hóa Nghệ thuật - Thể thao tại TPHCM và có cuộc sống hạnh phúc bên vợ và con gái.",
+    "link": "https://dantri.com.vn/giai-tri/nhac-si-sy-luan-tung-bi-tai-nan-mat-tri-nho-song-thuc-vat-gio-ra-sao-20250324113137365.htm",
+    "cat": "giai-tri",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Sỹ Luân hiện tại ra sao sau tai nạn giao thông cách đây 16 năm?",
+    "answers": [
+      {
+        "text": "Sức khỏe ổn định và sống hạnh phúc bên gia đình.",
+        "correct": true
+      },
+      {
+        "text": "Vẫn sống thực vật và không thể giao tiếp.",
+        "correct": false
+      },
+      {
+        "text": "Đã trở thành một ca sĩ nổi tiếng hơn.",
+        "correct": false
+      },
+      {
+        "text": "Đang điều trị tại bệnh viện.",
+        "correct": false
+      },
+      {
+        "text": "Không còn hoạt động trong ngành âm nhạc.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Ukraine phá hủy 4 trực thăng trong lãnh thổ Nga bằng một đòn tấn công",
     "content": "Trong một cuộc tấn công vào lãnh thổ Nga, lực lượng đặc nhiệm Ukraine đã phá hủy 4 trực thăng quân sự, bao gồm 2 trực thăng tấn công Ka-52 và 2 trực thăng vận tải Mi-8, tại vùng Belgorod. Cuộc tấn công này được thực hiện bằng hệ thống HIMARS do Mỹ viện trợ, cho thấy khả năng tấn công của Ukraine đến sâu trong lãnh thổ Nga. Tuyên bố từ lực lượng Ukraine khẳng định rằng không có vị trí nào là an toàn đối với họ.",
     "link": "https://dantri.com.vn/the-gioi/ukraine-pha-huy-4-truc-thang-trong-lanh-tho-nga-bang-mot-don-tan-cong-20250324134830007.htm",
@@ -1410,28 +1441,32 @@
     ]
   },
   {
-    "title": "6 món hỗ trợ cải thiện tiêu hóa",
-    "content": "Bài viết giới thiệu 6 món ăn hỗ trợ cải thiện tiêu hóa, bao gồm sữa chua, rau xanh đậm, hạt chia, táo, rau thì là và đu đủ. Những thực phẩm này giàu lợi khuẩn, chất xơ và enzyme, giúp tăng cường hệ tiêu hóa, giảm tình trạng táo bón và đầy hơi. Sữa chua chứa probiotic, trong khi rau xanh và hạt chia cung cấp chất xơ cần thiết cho sự hoạt động của đường ruột. Đu đủ với enzyme papain hỗ trợ phân hủy protein, góp phần vào quá trình tiêu hóa.",
-    "link": "https://vnexpress.net/6-mon-ho-tro-cai-thien-tieu-hoa-4865045.html",
+    "title": "4 sai lầm phổ biến khi đi bộ gây đau và tăng cân",
+    "content": "Chuyên gia Joanna Hall chỉ ra bốn sai lầm phổ biến khi đi bộ có thể dẫn đến đau và tăng cân. Những sai lầm này bao gồm sử dụng sai nhóm cơ, đi bộ bằng bàn chân thụ động, tư thế đầu không đúng và không vận động tay. Việc lạm dụng cơ gấp hông, đi bằng bàn chân phẳng và tư thế cúi đầu gây áp lực lên cột sống và khớp, trong khi không vận động tay làm giảm hiệu quả tập luyện. Để cải thiện, cần chú ý đến cách đi bộ và tư thế cơ thể.",
+    "link": "https://vnexpress.net/4-sai-lam-pho-bien-khi-di-bo-gay-dau-va-tang-can-4864895.html",
     "cat": "suc-khoe",
-    "positivity": 9,
+    "positivity": 7,
     "importance": 8,
-    "question": "Những món nào hỗ trợ cải thiện tiêu hóa?",
+    "question": "Những sai lầm nào khi đi bộ có thể gây đau và tăng cân?",
     "answers": [
       {
-        "text": "Sữa chua, rau xanh đậm, hạt chia, táo, rau thì là, đu đủ",
+        "text": "Sử dụng sai nhóm cơ, đi bằng bàn chân thụ động, tư thế đầu không đúng và không vận động tay",
         "correct": true
       },
       {
-        "text": "Cơm trắng, bánh mì, thịt đỏ, sữa tươi, nước ngọt",
+        "text": "Đi bộ không đủ nhanh",
         "correct": false
       },
       {
-        "text": "Cá hồi, mỳ Ý, khoai tây, trái cây khô",
+        "text": "Không mang giày thể thao",
         "correct": false
       },
       {
-        "text": "Thịt gà, xôi, kem, trà sữa, bánh ngọt",
+        "text": "Đi bộ trong thời gian ngắn",
+        "correct": false
+      },
+      {
+        "text": "Chỉ đi bộ trên bề mặt bằng phẳng",
         "correct": false
       }
     ]
@@ -1464,37 +1499,6 @@
     ]
   },
   {
-    "title": "4 sai lầm phổ biến khi đi bộ gây đau và tăng cân",
-    "content": "Chuyên gia Joanna Hall chỉ ra bốn sai lầm phổ biến khi đi bộ có thể dẫn đến đau và tăng cân. Những sai lầm này bao gồm sử dụng sai nhóm cơ, đi bộ bằng bàn chân thụ động, tư thế đầu không đúng và không vận động tay. Việc lạm dụng cơ gấp hông, đi bằng bàn chân phẳng và tư thế cúi đầu gây áp lực lên cột sống và khớp, trong khi không vận động tay làm giảm hiệu quả tập luyện. Để cải thiện, cần chú ý đến cách đi bộ và tư thế cơ thể.",
-    "link": "https://vnexpress.net/4-sai-lam-pho-bien-khi-di-bo-gay-dau-va-tang-can-4864895.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Những sai lầm nào khi đi bộ có thể gây đau và tăng cân?",
-    "answers": [
-      {
-        "text": "Sử dụng sai nhóm cơ, đi bằng bàn chân thụ động, tư thế đầu không đúng và không vận động tay",
-        "correct": true
-      },
-      {
-        "text": "Đi bộ không đủ nhanh",
-        "correct": false
-      },
-      {
-        "text": "Không mang giày thể thao",
-        "correct": false
-      },
-      {
-        "text": "Đi bộ trong thời gian ngắn",
-        "correct": false
-      },
-      {
-        "text": "Chỉ đi bộ trên bề mặt bằng phẳng",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Từng mắc quai bị có vô sinh không?",
     "content": "Bệnh quai bị có thể gây ra một số biến chứng nghiêm trọng, bao gồm viêm tinh hoàn ở nam giới, đặc biệt là sau tuổi dậy thì, dẫn đến nguy cơ vô sinh. Nếu viêm tinh hoàn xảy ra ở cả hai bên, khả năng sản xuất tinh trùng sẽ suy giảm nghiêm trọng, gây ra tình trạng vô tinh. Trẻ gái cũng có thể bị viêm buồng trứng, nhưng ít khi dẫn đến vô sinh. Để phòng ngừa, việc tiêm vaccine quai bị là rất quan trọng.",
     "link": "https://vnexpress.net/tung-mac-quai-bi-co-vo-sinh-khong-4865030.html",
@@ -1517,6 +1521,33 @@
       },
       {
         "text": "Không, trẻ sẽ luôn có khả năng sinh sản.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "6 món hỗ trợ cải thiện tiêu hóa",
+    "content": "Bài viết giới thiệu 6 món ăn hỗ trợ cải thiện tiêu hóa, bao gồm sữa chua, rau xanh đậm, hạt chia, táo, rau thì là và đu đủ. Những thực phẩm này giàu lợi khuẩn, chất xơ và enzyme, giúp tăng cường hệ tiêu hóa, giảm tình trạng táo bón và đầy hơi. Sữa chua chứa probiotic, trong khi rau xanh và hạt chia cung cấp chất xơ cần thiết cho sự hoạt động của đường ruột. Đu đủ với enzyme papain hỗ trợ phân hủy protein, góp phần vào quá trình tiêu hóa.",
+    "link": "https://vnexpress.net/6-mon-ho-tro-cai-thien-tieu-hoa-4865045.html",
+    "cat": "suc-khoe",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Những món nào hỗ trợ cải thiện tiêu hóa?",
+    "answers": [
+      {
+        "text": "Sữa chua, rau xanh đậm, hạt chia, táo, rau thì là, đu đủ",
+        "correct": true
+      },
+      {
+        "text": "Cơm trắng, bánh mì, thịt đỏ, sữa tươi, nước ngọt",
+        "correct": false
+      },
+      {
+        "text": "Cá hồi, mỳ Ý, khoai tây, trái cây khô",
+        "correct": false
+      },
+      {
+        "text": "Thịt gà, xôi, kem, trà sữa, bánh ngọt",
         "correct": false
       }
     ]
@@ -2654,33 +2685,6 @@
     ]
   },
   {
-    "title": "Nghệ sĩ Vũ Thanh thời trẻ lầm lỡ, về già đau đớn nhìn vợ nguy kịch",
-    "content": "Nghệ sĩ Vũ Thanh hiện đang trải qua thời kỳ khó khăn khi vợ ông, ca sĩ Lệ Hải, đang trong tình trạng nguy kịch do nhiều bệnh lý nghiêm trọng. Sau hơn 40 năm gắn bó, ông phải chứng kiến cảnh vợ mình chống chọi với bệnh tật và suy yếu dần. Chi phí điều trị hiện đã vượt quá khả năng tài chính của gia đình, và ông phải vật lộn để kiếm sống trong lúc chăm sóc vợ. Dù vậy, ông vẫn giữ tinh thần lạc quan và không ngừng hy vọng vào sự hồi phục của vợ.",
-    "link": "https://dantri.com.vn/giai-tri/nghe-si-vu-thanh-thoi-tre-lam-lo-ve-gia-dau-don-nhin-vo-nguy-kich-20250321173615479.htm",
-    "cat": "gia-dinh",
-    "positivity": 3,
-    "importance": 7,
-    "question": "Tình trạng sức khỏe của vợ nghệ sĩ Vũ Thanh hiện tại ra sao?",
-    "answers": [
-      {
-        "text": "Vợ ông đang trong tình trạng nguy kịch.",
-        "correct": true
-      },
-      {
-        "text": "Vợ ông đã hồi phục hoàn toàn.",
-        "correct": false
-      },
-      {
-        "text": "Vợ ông đang khỏe mạnh và không có vấn đề gì.",
-        "correct": false
-      },
-      {
-        "text": "Vợ ông chỉ bị cảm lạnh thông thường.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Mẹ 3 con 'lão hóa ngược' sau trút bỏ 27 kg mỡ",
     "content": "Bùi Thị Minh Nguyệt, 28 tuổi, đã giảm 27 kg và 40 cm vòng eo trong gần 1,5 năm nhờ áp dụng chế độ ăn \"eat clean\" và tích cực vận động. Sau khi sinh hai con, Nguyệt đã phải đối mặt với tình trạng béo phì và nhiều vấn đề sức khỏe, nhưng nhờ quyết tâm thay đổi, cô đã đạt được vóc dáng thon gọn và khỏe mạnh hơn. Hiện tại, Nguyệt không chỉ duy trì thói quen ăn uống lành mạnh mà còn trở thành huấn luyện viên dinh dưỡng, giúp đỡ những người khác trong hành trình giảm cân và cải thiện sức khỏe.",
     "link": "https://vnexpress.net/me-3-con-lao-hoa-nguoc-sau-trut-bo-27-kg-mo-4864134.html",
@@ -2707,6 +2711,33 @@
       },
       {
         "text": "10 kg",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Nghệ sĩ Vũ Thanh thời trẻ lầm lỡ, về già đau đớn nhìn vợ nguy kịch",
+    "content": "Nghệ sĩ Vũ Thanh hiện đang trải qua thời kỳ khó khăn khi vợ ông, ca sĩ Lệ Hải, đang trong tình trạng nguy kịch do nhiều bệnh lý nghiêm trọng. Sau hơn 40 năm gắn bó, ông phải chứng kiến cảnh vợ mình chống chọi với bệnh tật và suy yếu dần. Chi phí điều trị hiện đã vượt quá khả năng tài chính của gia đình, và ông phải vật lộn để kiếm sống trong lúc chăm sóc vợ. Dù vậy, ông vẫn giữ tinh thần lạc quan và không ngừng hy vọng vào sự hồi phục của vợ.",
+    "link": "https://dantri.com.vn/giai-tri/nghe-si-vu-thanh-thoi-tre-lam-lo-ve-gia-dau-don-nhin-vo-nguy-kich-20250321173615479.htm",
+    "cat": "gia-dinh",
+    "positivity": 3,
+    "importance": 7,
+    "question": "Tình trạng sức khỏe của vợ nghệ sĩ Vũ Thanh hiện tại ra sao?",
+    "answers": [
+      {
+        "text": "Vợ ông đang trong tình trạng nguy kịch.",
+        "correct": true
+      },
+      {
+        "text": "Vợ ông đã hồi phục hoàn toàn.",
+        "correct": false
+      },
+      {
+        "text": "Vợ ông đang khỏe mạnh và không có vấn đề gì.",
+        "correct": false
+      },
+      {
+        "text": "Vợ ông chỉ bị cảm lạnh thông thường.",
         "correct": false
       }
     ]
